Fix issue with old Safari not supported flex gap.

--- a/users/sign-in.css
+++ b/users/sign-in.css
@@ -7,7 +7,7 @@ main > section.flex {
 }
 
     main > section.flex > * + * {
-        margin-left: 1rem;
+        margin-left: 1rem; /* https://stackoverflow.com/questions/65452057/flexbox-gap-workaround-for-safari */
     }
 
     main > section.flex > form#sign_in_form {
@@ -62,11 +62,16 @@ main > section.flex {
 @media only screen and (max-width : 767px) {
     main > section.flex {
         align-items: initial;
-        --gap: 1rem;
+        --gap: 0;
         margin: 0 0 2rem 0;
         max-width: none;
         flex-direction: column;
     }
+
+        main > section.flex > * + * {
+            margin-left: 0;
+            margin-top: 1rem;
+        }
 
         main > section.flex > form#sign_in_form,
         main > section.flex > #no_account {
